--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,11 @@
   --color-light-grey: #e7e9fc;
   --transition-duration: 250ms;
   --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --mobile: 428px;
+  --tablet: 768px;
+  --desktop: 1158px;
+  --to-tablet: 767.98;
+  --to-desctop: 1157.98;
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -63,12 +68,27 @@ img {
   padding-bottom: 120px;
 }
 .container {
-  max-width: 1158px;
   margin-left: auto;
   margin-right: auto;
   padding-right: 15px;
   padding-left: 15px;
 }
+@media screen and(min-width: var(--mobile)) {
+  .container {
+    max-width: var(--mobile);
+  }
+}
+@media screen and(min-width: var(--tablet)) {
+  .container {
+    max-width: var(--tablet);
+  }
+}
+@media screen and(min-width: var(--desktop)) {
+  .container {
+    max-width: var(--desktop);
+  }
+}
+
 /* Styles Header */
 .logo,
 .logo-footer {
@@ -501,8 +521,9 @@ img {
 .portfolio-item {
   margin: 24px 12px;
 }
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio-link:hover,
+.portfolio-link:focus {
+  display: block;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
 
