--- a/css/styles.css
+++ b/css/styles.css
@@ -232,12 +232,22 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url("../images/hero.jpg");
+    url("../images/hero/hero_mob_1x_428.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-color: var(--background-color-dark-grey);
 }
-
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/hero/hero_mob_2x_428.jpg");
+  }
+}
 .hero-title {
   margin-bottom: 72px;
   font-weight: 700;
@@ -246,21 +256,54 @@ img {
   color: var(--color-white);
 }
 @media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/hero/hero_tab_1x_768.jpg");
+  }
   .hero-title {
     font-size: 56px;
     line-height: 1.07;
     margin-bottom: 40px;
   }
 }
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 768px) and (min-resolution: 192dpi),
+  screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/hero/hero_tab_2x_768.jpg");
+  }
+}
 @media screen and (min-width: 1200px) {
   .hero {
     padding: 188px 0px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/hero/hero_desk_1x_1440.jpg");
   }
   .hero-title {
     margin-bottom: 48px;
   }
 }
-
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 1200px) and (min-resolution: 192dpi),
+  screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../images/hero/hero_desk_2x_1440.jpg");
+  }
+}
 .button {
   box-sizing: border-box;
   min-width: 165px;
@@ -685,6 +728,7 @@ img {
 .portfolio-item {
   max-width: 396px;
 }
+
 @media screen and (min-width: 768px) {
   .portfolio-list {
     row-gap: 72px;
@@ -692,6 +736,10 @@ img {
   .portfolio-item {
     max-width: 345px;
     /* max-width: calc((100%-24px) / 2); */
+  }
+  .portfolio-img {
+    width: 356px;
+    height: 300px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -701,6 +749,9 @@ img {
   .portfolio-item {
     max-width: 360px;
     /* max-width: calc((100%-48px) / 3); */
+  }
+  .portfolio-img {
+    width: 360px;
   }
 }
 
