--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ img {
   align-items: center;
   justify-content: space-between;
 }
+
 @media screen and (min-width: 1200px) {
   .contacts {
     padding: 24px 0px;
@@ -144,6 +145,9 @@ img {
   .nav-list,
   .menu-contacts {
     display: none;
+  }
+  .header-container {
+    max-width: 767.98px;
   }
 }
 
@@ -379,8 +383,7 @@ img {
 }
 @media screen and (min-width: 768px) {
   .benefits-list-item {
-    flex-basis: 347px;
-    /* flex-basis: calc((100%-58px) / 2); */
+    flex-basis: calc((100% - 24px) / 2);
   }
 }
 
@@ -391,8 +394,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .benefits-list-item {
-    flex-basis: 264px;
-    /* flex-basis: calc((100%-104px) / 4); */
+    flex-basis: calc((100% - 72px) / 4);
   }
   .subtitle {
     text-align: left;
@@ -508,18 +510,24 @@ img {
 }
 
 .clients-item {
-  flex-basis: calc((100%-48px) / 2);
-  max-width: 190px;
+  flex-basis: calc((100% - 16px) / 2);
+  /* max-width: 190px; */
 }
 @media screen and (min-width: 768px) {
   .clients-list {
     column-gap: 24px;
   }
   .clients-item {
-    flex-basis: calc((100%-80px) / 3);
+    flex-basis: calc((100% - 48px) / 3);
     max-width: 168px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .clients-item {
+    flex-basis: calc((100% - 120px) / 6);
+  }
+}
+
 .clients-link {
   display: flex;
   justify-content: center;
@@ -552,11 +560,13 @@ img {
 }
 @media screen and (min-width: 768px) {
   .footer-container {
+    margin: 0px auto;
+    max-width: 496px;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: baseline;
     column-gap: 24px;
-    /* justify-content: space-between; */
+    justify-content: flex-start;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -564,6 +574,7 @@ img {
     padding: 100px 0px;
   }
   .footer-container {
+    max-width: 100%;
     justify-content: space-between;
   }
 }
@@ -999,6 +1010,10 @@ img {
   transform: translateX(100%);
   transition: transform var(--transition-duration)
     var(--transition-timing-function);
+}
+.button-modal-close.menu-toggle {
+  top: 40px;
+  right: 40px;
 }
 .menu-container.is-open {
   transform: translateX(0);
